--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.125",
     "@types/node": "^20.8.9",
     "aws-cdk": "^2.103.1",
     "aws-cdk-lib": "^2.103.1",
     "constructs": "^10.3.0",
+    "esbuild": "^0.19.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.438.0",
+    "@types/uuid": "^9.0.6",
+    "uuid": "^9.0.1"
   }
 }
