--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.438.0",
     "@aws-sdk/client-s3": "^3.438.0",
     "@types/uuid": "^9.0.6",
     "uuid": "^9.0.1"
