--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.438.0",
     "@aws-sdk/client-s3": "^3.438.0",
+    "@aws-sdk/lib-dynamodb": "^3.441.0",
+    "@aws-sdk/util-dynamodb": "^3.441.0",
     "@types/uuid": "^9.0.6",
     "uuid": "^9.0.1"
   }
