--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^5.6.6",
     "@aws-sdk/client-dynamodb": "^3.438.0",
     "@aws-sdk/client-s3": "^3.438.0",
     "@aws-sdk/lib-dynamodb": "^3.441.0",
     "@aws-sdk/util-dynamodb": "^3.441.0",
     "@types/uuid": "^9.0.6",
+    "aws-amplify": "^5.3.12",
     "uuid": "^9.0.1"
   }
 }
