--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@aws-sdk/client-cognito-identity": "^3.449.0",
     "@aws-sdk/client-dynamodb": "^3.438.0",
     "@aws-sdk/client-s3": "^3.438.0",
+    "@aws-sdk/credential-providers": "^3.449.0",
     "@aws-sdk/lib-dynamodb": "^3.441.0",
     "@aws-sdk/util-dynamodb": "^3.441.0",
     "@types/uuid": "^9.0.6",
